# python-quick-start

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  main.py  pyproject.toml
src/taishan/: auth.py  cli.py  const.py  server.py
src/taishan/static/: hello.txt
