[project]
name = "taishan"
version = "0.1.0"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Taishan to proxy APIs of Taishan service"

authors = [
  {name = "Some Name", email = "name@example.com"},
]

dependencies = [
    "fastapi",
    "requests",
]

[project.urls]
Repository = "https://github.com/chenzhiwei/python-quick-start"

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.scripts]
taishan-cli = "taishan.cli:run"

[tool.ruff]
line-length = 120

[tool.ruff.isort]
known-third-party = ["taishan", "pydantic", "starlette"]

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.distutils.egg_info]
egg_base = "build"

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
