[project]
name = "taishan"
version = "0.1.0"
requires-python = ">3.10"
license = {file = "LICENSE"}
description = "Taishan to proxy APIs of Taishan service"

authors = [
  {name = "Some Name", email = "name@example.com"},
]

dependencies = [
  "fastapi",
  "requests",
]

[project.urls]
Repository = "https://github.com/chenzhiwei/python-quick-start"

[project.optional-dependencies]
dev = [
  "ruff",
]

[project.scripts]
taishan-cli = "taishan.cli:run"

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
case-sensitive = false
force-sort-within-sections = false # `import xx` before `from xx import zz`

[tool.distutils.egg_info]
egg_base = "build" # create egg_info files inside build dir

[[tool.uv.index]]
url = "https://mirrors.huaweicloud.com/repository/pypi/simple"
default = true

[tool.uv.pip]
index-url = "https://mirrors.huaweicloud.com/repository/pypi/simple"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
